--- a/greed.cabal
+++ b/greed.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3f1b68a42178ebcd529fe433aa377a8e9359b536b29a8f6157c1acd81032e8fd
+-- hash: 48337d5753605016350e99181797bea4d130493387533113fa4e0db68b4b5e28
 
 name:           greed
 version:        0.1.0.0
@@ -59,4 +59,6 @@ test-suite greed-test
   build-depends:
       base >=4.7 && <5
     , greed
+    , hspec
+    , hspec-discover
   default-language: Haskell2010
