--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,8 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+    - -Werror
     dependencies:
     - greed
     - hspec
