--- a/greed.cabal
+++ b/greed.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1c54003c62cd3f7b2a4a386c13bf0fbbc53ba56d34a9f206baf588c35afcd43a
+-- hash: caf626c04fc6db1d2904dc8744e8aabb40089fed3df6ea21673042a4a7003a18
 
 name:           greed
 version:        0.1.0.0
@@ -56,7 +56,7 @@ test-suite greed-test
       Paths_greed
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:
       base >=4.7 && <5
     , greed
